--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="https://mdragoni-221110-131-demo.my.salesforce.com/prefcenter/preference-center-1.2.0/css/pref-center-slds.css">
 <html>
   <head>
     <meta charset=utf-8">
@@ -8,5 +9,11 @@
 
       <h1>Travel to Milan </h1>
       <p> ...and you'll get to set these beutiful preferences</p>
+
+      <div id="pref-center-main"></div>
+      <script id="preference-center" src="https://mdragoni-221110-131-demo.my.salesforce.com/prefcenter/preference-center-1.2.0/js/main.js" 
+      pref-center-host="https://mdragoni-221110-131-demo.my.salesforce.com"
+      pref-center-name="Customer_Subscription_Form"
+      pref-center-param="pctoken"></script>
   </body>
 </html>
